fix overflowing address in sponsormodal

--- a/src/ui/components/argit/styles/_overrides.scss
+++ b/src/ui/components/argit/styles/_overrides.scss
@@ -977,3 +977,6 @@ pre code {
 .rv-pop {
   float: right;
 }
+.sponsor-h2 {
+  word-wrap: break-word;
+}
